ADD:Some Changes